...
                  child: Column(
                    mainAxisAlignment: MainAxisAlignment.start,
                    crossAxisAlignment: CrossAxisAlignment.center,
                    children: [
                      const SizedBox(height: 20.0),
                      TextFormField(
                          key: const Key("Firstname test key"),
                          controller: _firstNameController,
                          decoration: const InputDecoration(
                            border: UnderlineInputBorder(),
                            labelText: 'Nome*',
                            counterText: '',
                            errorMaxLines: 4,
...
                            } else {
                              return null;
                            }
                          }),
                      const SizedBox(height: 20.0),
                      TextFormField(
                          key: const Key("Lastname test key"),
                          controller: _lastNameController,
                          decoration: const InputDecoration(
                            border: UnderlineInputBorder(),
                            labelText: 'Cognome*',
                            counterText: '',
                            errorMaxLines: 4,
...
                            } else {
                              return null;
                            }
                          }),
                      const SizedBox(height: 20.0),
                      TextFormField(
                        key: const Key("Email test key"),
                        controller: _emailController,
                        decoration: const InputDecoration(
                          border: UnderlineInputBorder(),
                          labelText: 'Email*',
                          counterText: '',
                          errorMaxLines: 4,
...
                            return null;
                          }
                        },
                      ),
                      const SizedBox(height: 20.0),
                      TextFormField(
                          key: const Key("Password test key"),
                          controller: _passwordController,
                          decoration: InputDecoration(
                              border: const UnderlineInputBorder(),
                              labelText: 'Password*',
                              counterText: '',
                              errorMaxLines: 4,
...
                            } else {
                              return null;
                            }
                          }),
                      const SizedBox(height: 20.0),
                      TextFormField(
                          key: const Key("Password confirmation test key"),
                          controller: _passConfController,
                          decoration: InputDecoration(
                              border: const UnderlineInputBorder(),
                              labelText: 'Ripeti password*',
                              counterText: '',
                              errorMaxLines: 4,
...
                              ),
                            ),
                            const VerticalDivider(thickness: 2),
                            Expanded(
                              flex: 8,
                              child: TextFormField(
                                  key: const Key("Phone test key"),
                                  controller: _phoneController,
                                  maxLength: 15,
                                  decoration: const InputDecoration(
                                    border: UnderlineInputBorder(),
                                    labelText: 'Cellulare',
                                    counterText: '',
...
