...
                      ),
                    ),
                    Flex(
                      direction: Axis.vertical,
                      children: [
                        BigElevatedButton(
                          key: const Key('Signup test key'),
                          onPressed: () => {
                            Navigator.of(context).restorablePushNamed('/signup')
                          },
                          child: const Text('Registrati'),
                        ),
                        const SizedBox(
...
                        ),
                        BigOutlinedButton(
                          key: const Key('Signin test key'),
                          onPressed: () => {
                            Navigator.of(context).restorablePushNamed('/signin')
                          },
                          child: const Text('Accedi'),
                        ),
                      ],
                    ),
                    const PrivacyNote(),
                  ],
                ),
...
